<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/nav_bar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/downloading_btn_color"
        android:padding="2dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnHome"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@color/blog_item_time_text_new"
            android:text="@string/label_home" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/label_voice"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/detail_toolbar_text" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@color/detail_redirect"
            android:text="@string/label_return" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/option_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_voice" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/option_bar"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nav_bar"
        android:divider="@color/downloading_btn_color"
        android:drawSelectorOnTop="true" >

    </ListView>

    </RelativeLayout>
